--- a/cs_merch/cs_merch.csproj
+++ b/cs_merch/cs_merch.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\..\cs_merchandise\UI Framework\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="MySql.Data, Version=6.10.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -58,6 +58,18 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main-customer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main-customer.Designer.cs">
+      <DependentUpon>Main-customer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Main-payment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main-payment.Designer.cs">
+      <DependentUpon>Main-payment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,9 +78,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unfocus.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="User.cs" />
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main-customer.resx">
+      <DependentUpon>Main-customer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main-payment.resx">
+      <DependentUpon>Main-payment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -81,6 +102,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -94,6 +116,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\cs_merch_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\CSMS.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
